# oxtapus

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  poetry_auth_pypi.py  pyproject.toml
docs/: conf.py  index.html
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: index.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/oxtapus/: codal.html  fipiran.html  tgju.html  tsetmc.html
docs/_build/_sources/: index.rst
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_static/:  mycss.css
docs/_build/autoapi/: index.html
oxtapus/: __init__.py  codal.py  fipiran.py  rahavard.py  tgju.py  tsetmc.py
oxtapus/econ/: __init__.py  cbi.py  tgju.py
oxtapus/econ/cbi_utils/: constants.py
oxtapus/ise/: __init__.py  codal.py  tsetmc.py
oxtapus/ise/codal_utils/: __init__.py  clean_and_extend_data.py
oxtapus/ise/tsetmc/: tsetmc.py
oxtapus/ise/tsetmc_utils/: clean_and_extend_data.py  constants.py
oxtapus/models/: fipiran.py  rahavard.py  tsetmc.py
oxtapus/tsetmc/: __init__.py  options.py  tsetmc.py
oxtapus/tsetmc/utils/: __init__.py  columns.py  constants.py
oxtapus/utils/: __init__.py  columns.py  get.py  jdate.py  models.py  normalize.py
oxtapus/utils/codal/: clean_data.py  items.py  models.py  request.py  utils.py
oxtapus/utils/http/: __init__.py  requests.py
oxtapus/utils/tsetmc/: __init__.py  clean_and_extend_data.py  columns.py  constants.py
src/mf_data/econ/: __init__.py  tgju.py
src/mf_data/ise/: __init__.py  codal.py  rahavard.py  tsetmc.py
src/mf_data/utils/: __init__.py  async_.py  async_get.py
src/oxtapus/econ/: tgju.py
src/oxtapus/ise/: __init__.py  tsetmc.py
tests/utils/: test_normalize.py
(+171 files in other folders)
