[tool.poetry]
name = "oxtapus"
version = "0.3.8"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/oxtapus"

[tool.coverage.run]
source = ["oxtapus"]
branch = true

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.4"
httpx = "^0.25.0"
tenacity = "^8.2"
pydantic = "^2.8"
requests = "^2.32"
jdatetime = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
root = "valpy"
venvPath = "."
venv = ".venv"
