[project]
name = "oxtapus"
version = "0.3.11"
description = "گرد-آورِیِ داده هایِ بورسِ تهران و مربوط به آن"
readme = "README.md"
authors = [{ "name" = "Yaghoub Ghadri", email = "ghaderi.yaghoub@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "polars>=^1.4",
    "httpx>=0.25.0",
    "tenacity>=^8.2",
    "pydantic>=2.8",
    "requests>=2.32",
    "jdatetime>=5.0",
]

[project.urls]
Repository = "https://github.com/yghaderi/oxtapus"

[tool.pyright]
root = "valpy"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "black",
    "isort",
]
