[project]
name = "oxtapus"
version = "0.3.11"
description = "گرد-آورِیِ داده هایِ بورسِ تهران و مربوط به آن"
readme = "README.md"
authors = [{ "name" = "Yaghoub Ghadri", email = "ghaderi.yaghoub@gmail.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "jdatetime>=5.2.0",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
]

[project.urls]
Repository = "https://github.com/yghaderi/oxtapus"

[tool.pyright]
root = "valpy"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["black", "isort", "pre-commit"]
